--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -90,9 +90,10 @@ $(() => {
         scale: 1.1
     })
 });
+
 	</script>
 <!--===============================================================================================-->
 <script src="~/login/js/main.js"></script>
-
+@await Component.InvokeAsync("Notyf")
 </body>
 </html>
