--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -64,6 +64,7 @@
                 </div>
 
                 <div class="text-center p-t-136">
+                    Dont have an account? 
                     <a class="txt2" href="/Register">
                         Create your Account
                         <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
