--- a/Views/Register/Index.cshtml
+++ b/Views/Register/Index.cshtml
@@ -129,7 +129,7 @@
 
                 <div class="text-center p-t-136">
                     Already have an account?
-                    <a class="txt2" href="/Register">
+                    <a class="txt2" href="/auth/login">
                         Login
                         <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
                     </a>
