--- a/Views/Donor/Index.cshtml
+++ b/Views/Donor/Index.cshtml
@@ -65,5 +65,6 @@
             }
             </tbody>
         </table>
+        <vc:paginator result="Model.Result.Info"></vc:paginator>
     </div>
 </div>
