feat: add tom select

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true"/>
     <link rel="stylesheet" href="/BloodDonation.styles.css" asp-append-version="true">
+    <link rel="stylesheet" href="~/lib/tom/tom-style.css" asp-append-version="true">
+    <script src="~/lib/tom/tom-script.js" defer></script>
 </head>
 <body>
 <header>
