feat: add donation count

--- a/Views/Register/Index.cshtml
+++ b/Views/Register/Index.cshtml
@@ -96,6 +96,13 @@
                                 <span asp-validation-for="LastDonationDate"></span>
                             </div>
                         </div>
+                        <div class="col-12 col-md-6">
+                            <div class="form-group">
+                                <label asp-for="DonationCount">Total Donation Count</label>
+                                <input asp-for="DonationCount" type="number" step="1" class="form-control">
+                                <span asp-validation-for="DonationCount"></span>
+                            </div>
+                        </div>
                     </div>
                 </fieldset>
 
