feat: add images

--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -32,8 +32,8 @@
 <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100">
-            <div class="login100-pic js-tilt" data-tilt>
-                <img src="~/login/images/img-01.png" alt="IMG">
+            <div class="login100-pic js-tilt" data-tilt style="display: flex; align-items: center; justify-content: center; margin-top: -200px">
+                <img src="~/static/life.jpg" alt="IMG">
             </div>
 
             <form class="login100-form" method="post">
