feat: add profile update

--- a/Views/Shared/partials/_authPartial.cshtml
+++ b/Views/Shared/partials/_authPartial.cshtml
@@ -9,6 +9,11 @@
         </button>
         <ul class="dropdown-menu">
             <li>
+                <a class="dropdown-item" href="/Profile/UpdateProfile">
+                    Update Profile
+                </a>
+            </li>
+            <li>
                 <a class="dropdown-item" href="/Profile/ChangePassword">
                     Change Password
                 </a>
