--- a/Views/Shared/partials/_donorDashboardPartial.cshtml
+++ b/Views/Shared/partials/_donorDashboardPartial.cshtml
@@ -58,6 +58,15 @@
             </div>
         </div>
     </div>
-    <div class="col-12 col-md-8">
+    <div class="col-12 col-md-8 card">
+        <div class="card-body d-flex align-items-center justify-content-center flex-column">
+            <img src="~/static/sad.webp" class="img" alt="">
+            <h5>
+                Looks like you have not made any recent donations.
+            </h5>
+            <h6>
+                Click here to donate blood and save life!
+            </h6>
+        </div>
     </div>
 </div>
