--- a/Views/Donation/New.cshtml
+++ b/Views/Donation/New.cshtml
@@ -11,7 +11,7 @@
 }
 <div class="row">
     <div class="col-12 col-md-8 offset-md-2">
-        <form class="card" method="post">
+        <form class="card" method="post" enctype="multipart/form-data">
             <div class="card-header d-flex justify-content-between">
                 <h5 class="card-title">
                     Record Donation
@@ -84,7 +84,15 @@
                             <span asp-validation-for="Receiver" class="text-danger"></span>
                         </div>
                     </div>
+                    <div class="col-12">
+                        <div class="form-group">
+                            <label asp-for="File"></label>
+                            <input asp-for="File" type="file" accept="image/*" class="form-control">
+                            <span asp-validation-for="File"></span>
+                        </div>
+                    </div>
                 </div>
+                <img src="" id="display-image" class="d-none img img-thumbnail" style="height: 500px; margin: 20px  auto; display: block;">
             </div>
             <div class="card-footer">
                 <button class="btn btn-success">
@@ -102,6 +110,8 @@
     const ContactNoElm = document.querySelector("#ContactNo");
     const BloodGroupElm = document.querySelector("#BloodGroup");
     const DistrictElm = document.querySelector("#District");
+    const fileElm = document.querySelector("#File");
+    const imageDisplayElm = document.querySelector("#display-image");
     
     const useSelfElm = document.querySelector("#UseSelf");
     
@@ -112,6 +122,12 @@
             BloodGroupElm.value = '@donor?.BloodGroup';
             DistrictElm.value = '@donor?.District';
         }
+    });
+    
+    fileElm.addEventListener('change', e => {
+        const x = URL.createObjectURL(e.target.files[0]);
+        imageDisplayElm.src = x;
+        imageDisplayElm.classList.remove("d-none");
     });
     
     </script>
