--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
 ﻿@using BloodDonation.Constants
+@using BloodDonation.Provider.Interfaces
+@inject ICurrentUserProvider CurrentUserProvider
+@{
+    var isAdmin = !await CurrentUserProvider.IsDonor();
+}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,8 +28,23 @@
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Donor" asp-action="Index">Donor Search</a>
+                        <a class="nav-link text-danger" asp-area="" asp-controller="Donor" asp-action="Index">
+                            <span class="fa fa-user"></span> Donor Search
+                        </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-danger" asp-area="" asp-controller="Donation" asp-action="Index">
+                            <span class="fa fa-list-alt"></span> Donations
+                        </a>
+                    </li>
+                    @if (isAdmin)
+                    {
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" asp-area="" asp-controller="Admin" asp-action="DonationRequests">
+                                <span class="fa fa-list-alt"></span> Donation Requests
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
             <div>
